--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/bootstrap.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- link to manifest, then run npm run start:dev to add the abilit to install app on browser-->
   <link rel="manifest" href="dist/manifest.json">
   <script src='./dist/main.bundle.js'></script>
 
